recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: type mismatch;
 found   : Double
 required: Int
		case _ => x = getX()
                                  ^Tree:12: error: not found: value get
				y = get(Y)
                                    ^